--- a/index.html
+++ b/index.html
@@ -18,36 +18,37 @@
             height: 100vh;
         }
         .container {
-            max-width: 500px;
+            max-width: 90%;
             margin: 0 auto;
             padding: 20px;
         }
         h2 {
-            font-size: 28px;
+            font-size: 24px;
             font-weight: 600;
             margin-bottom: 12px;
-            line-height: 1.2;
+            line-height: 1.3;
             letter-spacing: -0.02em;
         }
         p {
-            font-size: 16px;
+            font-size: 14px;
             color: #888;
             margin-bottom: 12px;
             line-height: 1.5;
         }
         p:last-of-type {
-            font-size: 14px;
+            font-size: 13px;
             color: white;
             margin-bottom: 20px;
         }
         .input-container {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             align-items: center;
             background-color: white;
             border-radius: 5px;
             overflow: hidden;
-            max-width: 400px;
+            max-width: 90%;
             margin: auto;
             border: 2px solid #0080e6;
         }
@@ -58,16 +59,18 @@
             font-size: 16px;
             outline: none;
             font-family: Inter, sans-serif;
+            min-width: 180px;
         }
         button {
-            padding: 12px 20px;
+            padding: 12px 16px;
             background-color: #0080e6;
             color: white;
             border: none;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 14px;
             font-weight: 500;
             font-family: Inter, sans-serif;
+            width: 100%;
         }
         button:hover {
             background-color: #0066b8;
@@ -75,6 +78,15 @@
         .hidden-id {
             color: #000;
             font-size: 0px;
+        }
+        @media (min-width: 600px) {
+            .input-container {
+                flex-wrap: nowrap;
+                max-width: 400px;
+            }
+            button {
+                width: auto;
+            }
         }
     </style>
 </head>
@@ -125,7 +137,7 @@
             })
             .then(response => response.json())
             .then(data => {
-                window.location.href = "vsl.html"
+                window.location.href = "vsl.html";
                 document.getElementById("email").value = "";
             })
             .catch(error => {
