--- a/vsl.html
+++ b/vsl.html
@@ -6,16 +6,16 @@
   <title>LeadUp Style Landing Page</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-    
+
     body {
-      background-color: #131418; /* Dark background */
+      background-color: #131418;
       color: white;
-      font-family: Inter, sans-serif;
+      font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
     }
 
-    /* Top Navigation / Logo */
+    /* Navbar */
     .navbar {
       max-width: 1200px;
       margin: 0 auto;
@@ -23,16 +23,16 @@
       display: flex;
       align-items: center;
     }
-    
+
     .logo-container {
       display: flex;
       align-items: center;
       gap: 10px;
-      margin-left: 20px; /* Align with the text content */
+      margin-left: 20px;
     }
 
     .logo-image {
-      width: 30px; /* Adjust based on your logo size */
+      width: 30px;
       height: 30px;
       object-fit: contain;
     }
@@ -41,110 +41,82 @@
       font-size: 24px;
       font-weight: bold;
       color: white;
-      font-family: 'Poppins', sans-serif;
     }
 
-    /* Main container for left text + right snippet */
+    /* Main container */
     .container {
       max-width: 1200px;
       margin: 30px auto;
       padding: 20px;
-      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      gap: 20px;
     }
 
-    /* Left section (headline, sub-subheader, bullets, CTA) */
+    /* Left Section */
     .left-section {
       width: 52%;
-      margin-top: 40px;
-      margin-right: -20px;
-      display: inline-block;
     }
+
     .left-section h1 {
-      color: white;
       font-size: 34px;
       font-weight: 600;
       line-height: 1.2;
       margin-bottom: 20px;
-      font-family: 'Poppins', sans-serif;
     }
+
     .sub-subheader {
-      color: white;
       font-size: 14px;
-      font-weight: normal;
       margin-bottom: 20px;
-      font-family: 'Poppins', sans-serif;
     }
+
     .sub-subheader strong {
       font-weight: 600;
     }
+
     .left-section ul {
       list-style: none;
       padding: 0;
       margin: 20px 0;
     }
+
     .left-section ul li {
-      margin: 8px 0;  /* Reduced from 15px to 8px */
-      color: white;
+      margin: 8px 0;
       font-size: 16px;
-      font-family: 'Poppins', sans-serif;
       display: flex;
       align-items: center;
     }
+
     .left-section ul li::before {
       content: "✓";
       color: #0080e6;
       margin-right: 10px;
       font-weight: bold;
-      font-family: 'Poppins', sans-serif;
     }
 
-    /* Right snippet box (white) containing the snippet text + VSL video */
+    /* Right Section */
     .snippet-box {
       width: 42%;
-      display: inline-block;
-      vertical-align: top;
       border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      margin-top: 60px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
+
     .snippet-video video {
       width: 100%;
       border-radius: 5px;
       display: block;
     }
 
-    /* Footer */
-    .footer {
-      text-align: center;
-      margin-top: 50px;
-      font-size: 14px;
-      color: #666;
-    }
-
-    /* Update header styling */
-    .header {
-      color: #0080e6;
-      font-size: 16px;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      margin-bottom: 15px;
-      font-family: 'Poppins', sans-serif;
-      font-weight: 600;  /* Added font-weight to make it bold */
-    }
-
-    /* Update CTA container styling */
+    /* Call to Action */
     .cta-container {
-      /* Remove the old margin-left: 20px and let it stretch */
-      width: 94.5%; /* Matches combined widths of left (52%) + right (42%) */
+      width: 100%;
+      text-align: center;
       margin-top: 40px;
-      clear: both;
-      padding: 0;
-      /* No extra margin-left so it starts where left text begins */
-      margin-left: 0; 
     }
 
     .cta-button {
-      display: block;
+      display: inline-block;
       padding: 18px 36px;
       background-color: #0080e6;
       color: white;
@@ -153,10 +125,7 @@
       text-decoration: none;
       border-radius: 100px;
       text-transform: uppercase;
-      letter-spacing: 0.5px;
       transition: all 0.3s ease;
-      text-align: center;
-      width: 100%;
       border: 4px solid #131418;
       box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
       animation: whiteGlow 3s ease-in-out infinite;
@@ -178,11 +147,46 @@
       background-color: #0066b8;
       box-shadow: 0 0 12px rgba(255, 255, 255, 0.5);
     }
+
+    /* Footer */
+    .footer {
+      text-align: center;
+      margin-top: 50px;
+      font-size: 14px;
+      color: #666;
+    }
+
+    /* ✅ Mobile Responsive Fixes */
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .left-section, .snippet-box {
+        width: 100%;
+      }
+
+      .left-section h1 {
+        font-size: 28px;
+      }
+
+      .left-section ul {
+        padding-left: 0;
+      }
+
+      .cta-button {
+        font-size: 18px;
+        padding: 14px 28px;
+      }
+    }
+
   </style>
 </head>
 <body>
 
-  <!-- Top navigation with logo -->
+  <!-- Navbar -->
   <div class="navbar">
     <div class="logo-container">
       <img src="automa8-logo.jpg" alt="Automa8 AI Logo" class="logo-image">
@@ -190,7 +194,7 @@
     </div>
   </div>
 
-  <!-- Main content container -->
+  <!-- Main Content -->
   <div class="container">
     <div class="left-section">
       <div class="header">HELPING AGENCIES AND COACHES</div>
@@ -211,10 +215,11 @@
         </video>
       </div>
     </div>
+  </div>
 
-    <div class="cta-container">
-      <a href="form.html" class="cta-button">INTERESTED? LET'S TALK!</a>
-    </div>
+  <!-- Call to Action -->
+  <div class="cta-container">
+    <a href="form.html" class="cta-button">INTERESTED? LET'S TALK!</a>
   </div>
 
   <!-- Footer -->
