changed lead magnet main text

--- a/form.html
+++ b/form.html
@@ -252,7 +252,7 @@
         </div>
 
         <div class="left-section">
-            <div class="header-text">HELPING AGENCIES AND COACHES GROW:</div>
+            <div class="header-text"></div>
             <h1 class="main-heading">Book In A Demo</h1>
             <p class="description">Complete this form to guarantee your Demo Call slot.</p>
             <p class="description">Once done, you’ll head over to Calendly to wrap up the details and select a time that works for you!</p>
