--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
 
     <div class="container">
-        <h2>Unlock the secret to better conversions with our meeting analyzer, powered by entrepreneurial wisdom.</h2>
+        <h2>Supercharge your sales strategy with AI-driven insights—boost conversions by up to 30% and close deals faster.</h2>
         <p>When you provide your email, you'll be subscribed to our<br> newsletter. You can opt out anytime if it's not for you.</p>
         <div class="input-container">
             <input type="email" id="email" placeholder="Enter your email" required>
